first custom content

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,12 +2,11 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li>{{ site.title }}</li>
+          <li>by <a href="http://danielsmith.consulting">Daniel Smith</a> aka <a href="http://dansmith65.com">dansmith65</a></li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
         </ul>
       </div>
@@ -29,7 +28,8 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
+        {{ site.description }}
+		<br/><a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a>
       </div>
     </div>
 
