--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
         <ul class="contact-list">
           <li>{{ site.title }}</li>
           <li>by <a href="http://danielsmith.consulting">Daniel Smith</a> aka <a href="http://dansmith65.com">dansmith65</a></li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <li><a href="&#109;&#65;&#73;&#76;&#116;&#111;&#58;%64&#97;&#110;&#64;%66&#105;&#108;&#101;&#109;&#97;&#107;&#101;&#114;&#46;&#99;&#111;&#110;&#115;&#117;&#108;&#116;&#105;&#110;&#103;">&#100;&#97;&#110;&#64;&#102;&#105;&#108;&#101;&#109;&#97;&#107;&#101;&#114;&#46;&#99;&#111;&#110;&#115;&#117;&#108;&#116;&#105;&#110;&#103;</a></li>
         </ul>
       </div>
 
